--- a/css/airlitix-webapp.webflow.css
+++ b/css/airlitix-webapp.webflow.css
@@ -291,6 +291,7 @@
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
+  border-radius: 5px;
 }
 
 .greenhouse-view-heading {
@@ -508,8 +509,8 @@
   border-style: solid;
   border-width: 1px;
   border-color: rgba(0, 0, 0, 0.47);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#315c2b), to(#181f1c));
-  background-image: linear-gradient(180deg, #315c2b, #181f1c);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#315c2b), to(#315c2b));
+  background-image: linear-gradient(180deg, #315c2b, #315c2b);
 }
 
 .bg-gradient.admin {
@@ -555,8 +556,8 @@
 }
 
 .panel-body {
-  width: 20vw;
-  height: 35vw;
+  width: 25vw;
+  height: 40vw;
   min-height: 500px;
   min-width: 300px;
   padding: 12px;
@@ -586,15 +587,14 @@
   min-height: 100px;
   padding: 15px;
   background-color: #9ea93f;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#bfcea8), to(#a7fc76));
-  background-image: linear-gradient(180deg, #bfcea8, #a7fc76);
-  box-shadow: 0 0 6px 4px rgba(65, 199, 94, 0.55);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#a7fc76), to(#a7fc76));
+  background-image: linear-gradient(180deg, #a7fc76, #a7fc76);
   color: #181f1c;
 }
 
 .panel-image {
-  height: 6vw;
-  min-height: 90px;
+  height: 7vw;
+  min-height: 100px;
   background-image: url('../images/calculator-image.jpeg');
   background-position: 50% 50%;
   background-size: cover;
@@ -606,8 +606,8 @@
 }
 
 .grid {
-  margin: 20px 2vw 15px;
-  padding: 0px;
+  margin: 20px 1vw 15px;
+  padding: 15px;
   -webkit-box-pack: stretch;
   -webkit-justify-content: stretch;
   -ms-flex-pack: stretch;
@@ -624,9 +624,9 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   -ms-grid-rows: auto auto auto auto;
   grid-template-rows: auto auto auto auto;
-  border-style: none;
+  border-style: solid;
   border-width: 1px;
-  border-color: #27402b;
+  border-color: rgba(39, 64, 43, 0.38);
   border-radius: 5px;
 }
 
@@ -660,6 +660,8 @@
 }
 
 .keypad-btn:hover {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#e1e2e4), to(#848791));
+  background-image: linear-gradient(180deg, #e1e2e4, #848791);
   box-shadow: 1px 1px 7px -2px rgba(0, 0, 0, 0.61);
 }
 
@@ -673,16 +675,16 @@
 
 .keypad-btn-num {
   color: #181f1c;
-  font-size: 1vw;
+  font-size: 1.6vw;
   line-height: 1;
 }
 
 .btn-arrow {
-  width: 0.8vw;
+  width: 1vw;
 }
 
 .btn-arrow.bigger {
-  width: 1vw;
+  width: 1.5vw;
 }
 
 .enter-exit {
@@ -1101,6 +1103,9 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  border: 2px none #000;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
   background-color: rgba(39, 70, 144, 0);
 }
 
@@ -1408,6 +1413,11 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  border-style: none;
+  border-width: 2px;
+  border-color: #181f1c;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
   background-color: #27402b;
 }
 
@@ -1423,6 +1433,7 @@
   display: flex;
   width: 6vw;
   min-width: 120px;
+  border-radius: 5px;
   background-color: rgba(228, 0, 0, 0);
 }
 
@@ -1537,6 +1548,7 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  border: 1px none #000;
   background-color: #274690;
 }
 
@@ -1555,6 +1567,9 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  border: 2px none #000;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .admin-operation-div-main {
