--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src='https://socketio0.herokuapp.com/socket.io/socket.io.js'></script>
+  <script src='/socket.io/socket.io.js'></script>
 </head>
 <body class="body">
   <div id="bg-gradient" class="bg-gradient"></div>
