--- a/views/style-guide.html
+++ b/views/style-guide.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon May 02 2022 21:40:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Thu Jun 30 2022 22:07:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6249bc35ec629e3d31ae469a" data-wf-site="6249bc1ba58f8c8228c46fd1">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/airlitix-webapp.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Inconsolata:400,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -36,6 +36,9 @@
       <div id="gh1-b1" class="bay-div selected">
         <h3 class="bay-heading">Bay 1</h3>
       </div>
+      <div class="bay-div disabled">
+        <h3 class="bay-heading">Bay 1</h3>
+      </div>
       <div id="gh1-b1" class="bay-div error">
         <h3 class="bay-heading">Bay 1</h3>
       </div>
@@ -57,13 +60,70 @@
       <div id="toggle-div" class="toggle-div admin">
         <div id="toggle-handle" class="toggle-handle"></div>
       </div>
-      <div id="office" class="office-div office-select">
-        <h3 class="office-title">Office</h3>
+      <div class="div-block-2">
+        <div class="gear-div selected"></div>
+      </div>
+      <div class="div-block-4">
+        <div class="bay-icon-container-water in-progress"></div>
+        <div class="bay-icon-container-water success"></div>
+        <div class="bay-icon-container-water error"></div>
+      </div>
+      <div class="div-block-5">
+        <div class="bay-icon-container-map in-progress"></div>
+        <div class="bay-icon-container-map success"></div>
+        <div class="bay-icon-container-map error"></div>
+      </div>
+      <div class="div-block-5">
+        <div class="bay-icon-container-wifi in-progress"></div>
+        <div class="bay-icon-container-wifi success"></div>
+        <div class="bay-icon-container-wifi error"></div>
+      </div>
+      <div class="div-block-5">
+        <div class="bay-icon-container-system in-progress"></div>
+        <div class="bay-icon-container-system success"></div>
+        <div class="bay-icon-container-system error"></div>
+      </div>
+      <div class="user-mode-icons">
+        <div class="operation-icon water"></div>
+        <div class="operation-icon water active"></div>
+        <div class="operation-icon mapping"></div>
+        <div class="operation-icon mapping active"></div>
+        <div class="operation-icon wifi"></div>
+        <div class="operation-icon wifi active"></div>
+        <div class="operation-icon wifi-config"></div>
+        <div class="operation-icon wifi-config active"></div>
+        <div class="operation-icon mpu"></div>
+        <div class="operation-icon mpu active"></div>
+        <div class="operation-icon mpu-config"></div>
+        <div class="operation-icon mpu-config active"></div>
+        <div class="operation-icon info"></div>
+        <div class="operation-icon info active"></div>
+      </div>
+      <div class="homepage-icons">
+        <div class="operation-btn-home water"></div>
+        <div class="operation-btn-home water disabled"></div>
+        <div class="operation-btn-home water active"></div>
+        <div class="operation-btn-home mapping"></div>
+        <div class="operation-btn-home mapping disabled"></div>
+        <div class="operation-btn-home mapping active"></div>
+        <div class="operation-btn-home wifi"></div>
+        <div class="operation-btn-home wifi active"></div>
+        <div class="operation-btn-home wifi-config"></div>
+        <div class="operation-btn-home wifi-config active"></div>
+        <div class="operation-btn-home mpu"></div>
+        <div class="operation-btn-home mpu active"></div>
+        <div class="operation-btn-home mpu-config"></div>
+        <div class="operation-btn-home mpu-config active"></div>
       </div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6249bc1ba58f8c8228c46fd1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <style>
+.stop-propagation-div {
+	pointer-events: auto;
+}
+</style>
 </body>
 </html>
