--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,8 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src='/socket.io/socket.io.js'></script>
 </head>
 <body class="body">
   <div id="bg-gradient" class="bg-gradient"></div>
@@ -2106,5 +2108,6 @@
 }
 </style>
   <script src="https://cdn.jsdelivr.net/gh/cullenk/airlitix-webapp/views/js/script96.js"></script>
+  <script src="/js/common.js" ></script>
 </body>
 </html>
