--- a/views/style-guide.html
+++ b/views/style-guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jun 30 2022 22:07:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Sep 15 2022 00:00:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6249bc35ec629e3d31ae469a" data-wf-site="6249bc1ba58f8c8228c46fd1">
 <head>
   <meta charset="utf-8">
@@ -115,6 +115,10 @@
         <div class="operation-btn-home mpu-config"></div>
         <div class="operation-btn-home mpu-config active"></div>
       </div>
+      <div class="main-eye-toggle visible"></div>
+      <div class="main-eye-toggle not-visible"></div>
+      <div class="eye visible"></div>
+      <div class="eye not-visible"></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6249bc1ba58f8c8228c46fd1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
