--- a/views/index.html
+++ b/views/index.html
@@ -2101,6 +2101,7 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6249bc1ba58f8c8228c46fd1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src='/socket.io/socket.io.js'></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <style>
@@ -2109,5 +2110,6 @@
 }
 </style>
   <script src="https://cdn.jsdelivr.net/gh/cullenk/airlitix-webapp/views/js/script125.js"></script>
+  <script src="/js/common.js" ></script>
 </body>
 </html>
