NEW COMMON js version

--- a/views/index.html
+++ b/views/index.html
@@ -2110,6 +2110,6 @@
 }
 </style>
   <script src="https://cdn.jsdelivr.net/gh/cullenk/airlitix-webapp/views/js/script125.js"></script>
-  <script src="/js/common.js" ></script>
+  <script src="/js/commonV3.js" ></script>
 </body>
 </html>
